Snap class logic drafted