@@ -4,38 +4,36 @@ import java.util.Collections;
 import java.util.Comparator;
 
 public class CardGame {
-    private final String name;
     private final ArrayList<Card> deckOfCards;
 
-        // Constructor to initialize the game name and create the deck of cards
-        public CardGame(String name) {
-            this.name = name;
-            this.deckOfCards = new ArrayList<>();
-            createDeck();
-        }
+    // Constructor to initialize the game name and create the deck of cards
+    public CardGame(String name) {
+        this.deckOfCards = new ArrayList<>();
+        createDeck();
+    }
 
-        // Method to create the deck of 52 cards
-        private void createDeck() {
-            String[] suits = {"♥", "♣", "♦", "♠"};
-            String[] symbols = {"2", "3", "4", "5", "6", "7", "8", "9", "10", "J", "Q", "K", "A"};
-            int[] values = {2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14};
+    // Method to create the deck of 52 cards
+    private void createDeck() {
+        String[] suits = {"♥", "♣", "♦", "♠"};
+        String[] symbols = {"2", "3", "4", "5", "6", "7", "8", "9", "10", "J", "Q", "K", "A"};
+        int[] values = {2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14};
 
-            for (int i = 0; i < suits.length; i++) {
-                for (int j = 0; j < symbols.length; j++) {
-                    deckOfCards.add(new Card(suits[i], symbols[j], values[j]));
-                }
+        for (String suit : suits) {
+            for (int j = 0; j < symbols.length; j++) {
+                deckOfCards.add(new Card(suit, symbols[j], values[j]));
             }
         }
+    }
 
-        // Method to get the list of cards in the deck
-        public ArrayList<Card> getDeck() {
-            return deckOfCards;
-        }
+    // Public getter for deckOfCards
+    public ArrayList<Card> getDeckOfCards() {
+        return deckOfCards;
+    }
 
     // Deal the top card from the deck
     public Card dealCard() {
         if (!deckOfCards.isEmpty()) {
-            return deckOfCards.remove(0);
+            return deckOfCards.removeFirst();
         }
         return null; // Deck is empty
     }
@@ -54,6 +52,8 @@ public class CardGame {
     public void shuffleDeck() {
         Collections.shuffle(deckOfCards);
     }
+
+    public ArrayList<Card> getDeck() {
+        return deckOfCards;
+    }
 }
-
-
